--- a/styls.css
+++ b/styls.css
@@ -93,3 +93,60 @@ text-transform: uppercase;
     }
     
 }
+#page1 #nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2.3vw 4.5vw;
+}
+#nav2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3vw;
+
+}
+#nav2 h4{
+    font-size: 0.8vw;
+    font-weight: 500;
+    
+}
+.hero{
+    
+    width: 72%;
+    margin-left: 27%;
+    height: fit-content;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    z-index: 9999;
+}
+.big{
+    margin-top: 18vh;
+}
+.hero h1{
+    font-size: 8vw;
+    text-transform: uppercase;
+    line-height: 7vw;
+}
+.hero h2, .hero h3{
+    font-size: 8vw;
+    text-transform: uppercase;
+    line-height: 7vw;
+}
+.hero h2:hover{
+    -webkit-text-stroke:2px  #fff;
+    color: transparent;
+    font-weight: 500;
+
+}
+#crsr{
+    height: 2.3vw;
+    width: 2.3vw;
+    border-radius: 50%;
+    mix-blend-mode: difference;
+    border: 1px solid #ffffff7d;
+    position: fixed;
+    z-index: 9999;
+    transform: translate(-50%,-50%);
+}
